# advent-of-code-2021

./: prep.py  requirements.txt
2021/day03/: README.md
2021/day05/: README.md
2021/day06/: lanternfish.py
2021/day07/: README.md
2021/day08/: seven_segment_search.py
2021/day09/: README.md  smoke_basin.py
2021/day12/: README.md  passage_pathing.py
2021/day14/: extended_polymerization.py
2021/day15/: README.md
2021/day16/: README.md
aoc/: README.md  pyproject.toml
aoc/aoc/cli/: app.py  prep.py
aoc/aoc/templates/: day_template.py
aoc/aoc_2022/day03/: README.md  rucksack_reorganization.py
aoc_2021/day02/: README.md
aoc_2021/day04/: giant_squid.py
aoc_2021/day06/: README.md
aoc_2021/day07/: the_treachery_of_whales.py
aoc_2021/day08/: README.md
aoc_2021/day11/: README.md  dumbo_octopus.py
aoc_2021/day13/: transparent_origami.py
aoc_2022/day01/: README.md  calorie_counting.py
aoc_2022/day02/: README.md  rock_paper_scissors.py
aoc_2022/day03/: README.md  rucksack_reorganization.py
aoc_2022/day04/: README.md  camp_cleanup.py
aoc_2022/day05/: README.md  supply_stacks.py
aoc_2022/day06/: README.md  tuning_trouble.py
aoc_2022/day07/: README.md  no_space_left_on_device.py
aoc_2022/day08/: README.md  treetop_tree_house.py
day01/: README.md  submarine.py
day02/: dive.py
day03/: README.md  diagnostic.py
day04/: README.md
day05/: hydrothermal_venture.py
day1/: submarine.py
day10/: README.md  syntax_scoring.py
day13/: README.md
day14/: README.md
day15/: chiton.py
day16/: packet_decoder.py
(+2 files in other folders)
